package ensinet;


/**
* @generated
*/
public class Visitante {
    
    
    

    
    

    //                          Operations                                  
    
    /**
    * @generated
    */
    public int realizarCadastro(String nome, String email, String senha) {
        //TODO
        return 0;
    }
    
    /**
    * @generated
    */
    public boolean inserirUsuarioNaBD(String nome, String email, String senha) {
        //TODO
        return false;
    }
    
    /**
    * @generated
    */
    public void assistirAula(Aula aula) {
        //TODO
        return;
    }
    
    /**
    * @generated
    */
    public boolean estaCadastrado() {
        //TODO
        return false;
    }
    
    
}
