@startuml diagrama_classes
class Estudante{
    idEstudante: long
    nome: String
    email: String
    senha: String
    inserirDisciplinaMatriculadaNaBD(idDisciplina: long): boolean  
    fazerMatricula(idDisciplina: long): int
    {static}validarNome(nome: String): boolean
    {static}validarEmail(email: String): boolean
    {static}validarSenha(senha: String): boolean
    verificaMatriculado(idDisciplina: long): boolean
}

class Disciplina{
    idDisciplina: long
    {static}existeDisciplina(idDisciplina: long): boolean
}

class Visitante{
    realizarCadastro(nome: String, email: String, senha: String): int
    inserirUsuarioNaBD(nome: String, email: String, senha: String): boolean    
    assistirAula(aula: Aula): void
    estaCadastrado(): boolean
}

class Educador{
    disponibilizarAula(nomeDaAula: String, descricao: String, video: File, idDisciplina: long): int
}

class Aula{
    idAula: long
    idDisciplina: long
    numeroAvaliacoesPositivas: int
    numeroAvaliacoesNegativas: int
    {static}verificaFormatoVideo(video: File): boolean
    {static}existeAula(idAula: long): boolean
    verificaSePrivada(): boolean
    exibirVideo(): void
    exibirMsgErro(mensagem: String): void 
}

' heranças
Estudante--|>Visitante
Educador--|>Estudante

' dependencias
Estudante..>Disciplina: Usa
Educador..>Disciplina: Usa  
Educador..>Aula: Usa
Educador..>Aula: Cria
Visitante..>Aula: Usa
Visitante..>Estudante: Usa
Visitante..>Disciplina: Usa

' associações
Disciplina"1..1"<-right->"1..*"Aula: Contém
Disciplina"0..*"<-right->"0..*"Estudante: Matricula-se
Educador"1..1"<-right->"0..*"Aula: Produz
Educador"1..1"<-right->"0..*"Disciplina: Produz

@enduml